# jztree

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
.github/workflows/: docs-pages.yml
checks/: conftest.py  distr_dj_with_fof.py  hello_fof.py  hello_world.py  prepare_tests.py  pytest.ini
checks/CAMELS/: compare_CAMELS.py
checks/benchmarks/: bench_comm.py  bench_distr_fof.py  bench_distr_knn.py  bench_distr_tree.py  bench_fof.py  bench_knn.py  bench_multi_gpu.py  bench_multi_gpu_a.py  bench_ops.py  bench_tree.py
checks/old_benchmarks/: benchmark_knn.py  benchmark_knn_eval.py  benchmark_knn_ilist.py
checks/profiling/: compare_knn_libraries.py  fof_multi_gpu.py  multi_gpu.py  performance_single_gpu.py  ragged_all2all.py  reference.npy  write_faiss.py  write_jfof.py
checks/tests/: test_distr_fof.py  test_distr_knn.py  test_distr_tree.py  test_fof.py  test_knn.py  test_multi_gpu.py  test_multi_gpu_a.py  test_tree.py
docs/: api.rst  attribution.md  conf.py  developer_guide.md  examples.md  index.rst  installation.md  multi_gpu_guide.md  quickstart.md
docs/_static/: custom.css
notebooks/: example.ipynb  multi_gpu_guide.ipynb  quickstart.ipynb  sort.ipynb  tree.ipynb
old_benchmarks/: benchmark_knn.py  benchmark_knn_eval.py  benchmark_knn_ilist.py
packaging/: notes.txt  run-wheel-builds.sh
packaging/docker-wheel-builder/: Dockerfile  build-in-container.sh  config.sh  run-build-main.sh  run-build.sh
packaging/docker-wheel-builder-cu12/: Dockerfile  build-in-container.sh  config.sh  run-build.sh
packaging/jztree/: README.md  pyproject.toml
packaging/jztree-cu12/: README.md  pyproject.toml
packaging/jztree-cu13/: README.md  pyproject.toml
src/benchmarks/: hello_world.py
src/cj_codetools/: generator.py  parse.py
src/cj_codetools/templates/: template_ffi_call.j2  template_ffi_module.j2
src/custom_jax/: __init__.py  cj_new_tree.py  common.py  ffi_example.py  fmdj_plugin.py  forces.cu  forces.py  knn.cu  knn.py  multipoles.cu  multipoles.py  shared_utils.cuh  tree.cu  tree.py
src/custom_jax_cuda/: _generate_ffi.py  common.cuh  ffi_example.cuh  ffi_multipoles.cu  fmm.cuh  forces.cu  forces.cuh  knn.cu  multipoles.cu  multipoles.cuh  multipoles.h  shared_utils.cuh  tree.cu  tree.cuh  tree_deprecated.cu  tree_new.cuh
src/custom_jax_cuda/common/: data.cuh  iterators.cuh  math.cuh
src/custom_jax_cuda/old/: old_forces.cu
src/jz_codetools/: generator.py  parse.py
src/jz_codetools/templates/: template_ffi_module.j2  template_instancing.j2
src/jztree/: __init__.py  _backend.py  comm.py  common.py  config.py  data.py  fof.py  io.py  jax_ext.py  knn.py  stats.py  tools.py  tree.py  ztree.py
src/jztree_cuda/: THIRD_PARTY_NOTICES  __init__.py.in  _generate_ffi.py  fof.cuh  knn.cu  knn.cuh  sort.cuh  tools.cuh  tree.cuh
src/jztree_cuda/common/: data.cuh  knn_math.cuh  math.cuh  segment_sort.cuh
src/jztree_utils/: __init__.py  ics.py  io.py
src/jztree_utils/data/: pos2d_cosmo_128_100.npy
src/notebooks/: codegen.ipynb  custom_vjp.ipynb  example.ipynb  sort.ipynb
src/tests/: test_forces.py  test_knn.py
