[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core>=0.11", "nanobind>=2.9.2"]

[project]
name = "jztree"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "numpy>=2.2.6",
    # The following are only build dependencies... however, to simplify installation
    # with --no-build-isolation, we list them here as well.
    "scikit-build-core>=0.11", # actually only needed for build
    "nanobind>=2.9.2", # actually only needed for build
    "cmake>=3.24"
]

[tool.scikit-build]
cmake.version = ">=3.24"
build-dir = "build"
logging.level = "INFO"
build.requires = ["jax", "scikit-build-core>=0.11", "nanobind>=2.9.2", "cmake>=3.24"]
editable.rebuild = false

[project.optional-dependencies]
cuda13 = [
    "jax[cuda13]",
    "nvidia-cuda-cccl>=13.0.0"
]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pytest>=8.4.2"
]
build = [
    "scikit-build-core>=0.11",
    "nanobind>=2.9.2",
    "cmake>=3.24"
]