[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core>=0.11", "nanobind>=2.9.2", "setuptools-scm>=8"]

[project]
name = "jztree"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "jax",
    "numpy>=2.2.6",
    # The following are only build dependencies... however, to simplify installation
    # with --no-build-isolation, we list them here as well.
    "scikit-build-core>=0.11", # actually only needed for build
    "nanobind>=2.9.2", # actually only needed for build
    "cmake>=3.24",
    "setuptools-scm>=8"
]

[tool.scikit-build]
cmake.version = ">=3.24"
build-dir = "build"
logging.level = "INFO"
build.requires = ["jax", "scikit-build-core>=0.11", "nanobind>=2.9.2", "cmake>=3.24"]
editable.rebuild = false
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/jztree/_version.py"]

[tool.setuptools_scm]
version_file = "src/jztree/_version.py"

[project.optional-dependencies]
cuda13 = [
    "jax[cuda13]",
    "nvidia-cuda-cccl>=13.0.0"
]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pytest>=8.4.2",
    "hdf5plugin",
    "hdf5"
]


[tool.setuptools.package-data]
jztree_utils = ["data/*.npy"]