[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core>=0.11", "nanobind>=2.9.2", "setuptools-scm>=8"]

[project]
name = "jztree"
description = "A framework for Morton z-order trees for JAX with CUDA backend"
readme = "README.md"
authors = [{ name = "Jens Stücker", email = "jens.stuecker@univie.ac.at" }]
license = "MIT"
license-files = ["LICEN[CS]E"]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "jax>=0.8.0",
    "numpy>=2.2.6",
]

[project.urls]
Homepage = "https://jstuecker.github.io/jztree"
Issues = "https://github.com/jstuecker/jztree/issues"

[tool.scikit-build]
cmake.version = ">=3.24"
build-dir = "build"
logging.level = "INFO"
build.requires = ["jax", "scikit-build-core>=0.11", "nanobind>=2.9.2", "cmake>=3.24", "setuptools-scm>=8"]
editable.rebuild = false
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/jztree/_version.py"]

[tool.setuptools_scm]
version_file = "src/jztree/_version.py"

[project.optional-dependencies]
cuda13 = [
    "jax[cuda13]",
    "nvidia-cuda-cccl>=13.0.0"
]
dev = [
    # unit tests
    "pytest>=8.4.2",
    "scipy",
    "matplotlib>=3.10.6",
    "pytest-jax-bench",
    # code generation
    "jax-ffi-gen",

    "ipykernel>=6.30.1",
    
    # not really needed
    # "hdf5plugin",
    # "hdf5",

    # docs:
    "sphinx",
    "myst_parser",
    "sphinx_paramlinks",
    "sphinx_rtd_theme"
]


[tool.setuptools.package-data]
jztree_utils = ["data/*.npy"]