[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jztree"
version = "1.0.1"
description = "A framework for Morton z-order trees for JAX with CUDA backend"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Jens Stuecker", email = "jens.stuecker@univie.ac.at" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "jax>=0.8.0",
  "numpy>=2.2.6",
]

[project.urls]
Homepage = "https://jstuecker.github.io/jztree/"
Issues = "https://github.com/jstuecker/jztree/issues"

[project.optional-dependencies]
cuda12 = ["jztree-cu12==1.0.1"]
cuda13 = ["jztree-cu13==1.0.1"]

[tool.setuptools]
package-dir = {"" = "../../src"}

[tool.setuptools.packages.find]
where = ["../../src"]
include = ["jztree", "jztree.*"]